--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,19 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.1.5</version>
+                <configuration>
+                    <targetClasses>
+                        <param>com.piokot*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>com.piokot*</param>
+                    </targetTests>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <profiles>
